static/src/stylesheets/module/facia-cards/_slices.scss
/*

This file is to be used only for manual overrides of item defaults at a slice level.
Hence why a greater depth of selector specificity is needed.

*/
.facia-slice--hl4-h {
    @if $browser-supports-flexbox {
        @include flex-direction(row-reverse);

        .facia-slice__item:first-child {
            @include vertical-item-separator;
        }

        .facia-slice__item:last-child:before {
            display: none;
        }
    }

    .fc-item--half-tablet {
        .fc-item__standfirst {
            @include mq(tablet) {
                display: none;
            }
        }
    }
}

.facia-slice--h-ql4-ql4 {
    .fc-item--half-tablet {
        .fc-item__standfirst {
            @include mq(tablet, desktop) {
                display: block;
            }
        }
    }
}

.facia-slice--h-q-q {
    .fc-item--half-tablet {
        .fc-item__standfirst {
            @include mq(tablet) {
                display: none;
            }
        }
    }

    .fc-item--standard-tablet {
        .fc-item__standfirst {
            @include mq(desktop) {
                display: block;
            }
        }
    }
}

// reduce type size on q-q-q-q slice if it follows another slice in the same container
.facia-slice-wrapper + .facia-slice-wrapper {
    .facia-slice--q-q-q-q {
        .fc-item--standard-tablet {
            .fc-item__header {
                @include mq(tablet) {
                    @include fs-headline(2, true);
                }
            }
        }
    }
}

.facia-slice--h14-q-q {
    @if $browser-supports-flexbox {
        @include flex-direction(row-reverse);
    }

    .fc-item--standard-tablet {
        .fc-item__standfirst {
            @include mq(tablet) {
                display: block;
            }
        }
    }
}

/**
 * Bespoke MPU slice stylings
 */

.facia-slice--tl-tl-mpu {
    @include mq(tablet, $until: desktop) {
        > .facia-slice__item {
            .facia-slice__item:before {
                border: 0;
            }

            &:first-child {
                @include flex(1);
                width: 50%;

                .facia-slice__item {
                    @include flex-basis(100%);
                }
                .facia-slice__item:nth-child(5) {
                    padding-bottom: $gs-baseline;
                }
            }
            &:last-child {
                width: 50%;
            }
        }
    }
}

.facia-slice--t-tl-mpu {
    @include mq(tablet, $until: desktop) {
        > .facia-slice__item {
            width: 25% !important;

            &:last-child {
                @include flex(2);
                width: 50% !important;
            }
        }
    }
}

.facia-slice--popular {

    .facia-slice__item:before {
        display: none;
    }

    @include mq(tablet) {
        .facia-slice__popular-mpu {
            position: absolute;
            max-width: 320px;
        }
    }

    @include mq(tablet, desktop) {
        .facia-slice__popular-mpu {
            bottom: 0;
            right: 0;
        }
    }

    @include mq(desktop) {
        .facia-slice__popular-mpu {
            top: $gs-baseline;
            right: -($gs-gutter / 2);
        }

        .tabs__pane {
            width: (100% / 3) * 2;
        }
    }
}

/**
 * Commercial Nav lists
 */

.facia-slice--nav-list {
    $alley: $gs-gutter * .5;

    @include mq($until: tablet) {
        @include columns($rule: true);
    }

    @include mq(tablet, desktop) {
        @include columns($cols: 3, $gap: $alley, $rule: true);
    }

    @include mq(desktop) {
        @include columns($cols: 4, $gap: $alley, $rule: true);
    }
}

.facia-slice__item--nav-list {
    display: inline-block;
}

.facia-slice--nav-list--media {
    $alley: $gs-gutter * .5;

    @include mq($until: tablet) {
        @include columns($rule: true);
    }

    @include mq(tablet) {
        @include columns($cols: 3, $gap: $alley, $rule: true);
    }
}

